kubernetes/mbtpy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mbtpy-deployment
  labels:
    app: mbtpy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mbtpy
  template:
    metadata:
      labels:
        app: mbtpy
    spec:
      containers:
      - name: mbtpy-api
        image: toinoublanc/mbtpy-api:1.1.0
        ports:
        - containerPort: 8000
