kubernetes/mbtpy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-eval
  labels:
    app: my-k8s-eval
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-k8s-eval
