kubernetes/mbtpy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbtpy-ingress
spec:
  defaultBackend:
    service:
      name: mbtpy-service
      port:
        number: 8001
